--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,10 @@
     "react": "^18.3.1",
     "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.4.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "recharts": "^3.5.1",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
