--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb+srv://gonuguntamanoharkumar_db_user:WLrUfETnXx4gtOdh@cluster0.mhamlbr.mongodb.net/?appName=Cluster0
-JWT_SECRET=tu8861sRFQyXDRH
+MONGO_URI=YourMonogoURI
+JWT_SECRET=YOURSECRETKEY
