Update sensitive information in .env file
Updated MongoDB URI and JWT secret in the environment file.

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb+srv://gonuguntamanoharkumar_db_user:WLrUfETnXx4gtOdh@cluster0.mhamlbr.mongodb.net/?appName=Cluster0
-JWT_SECRET=tu8861sRFQyXDRH
+MONGO_URI=YOURMONGOURI
+JWT_SECRET=YOURSECRETKEY
